--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,9 +23,10 @@ body {
 }
 
 .menuitem a {
-  font-size: x-large;
+  font-size: larger;
   color: #c4881be3;
   text-shadow: 5px 3px 10px rgba(0, 0, 0, 0.281);
+  text-transform: uppercase;
 }
 
 /*-------Grow hover animation from website travis.media, link in README.md--*/
@@ -59,7 +60,7 @@ body {
 
 .hr-small {
     border-top: 1px solid #c4881be3;
-    width: 300px;
+    width: 400px;
 }
 
 /* ---------------------------------------------Hero Image Section ----------------------------------*/
@@ -69,7 +70,7 @@ body {
 .hero-container {
   max-width: 100%;
   height: 750px;
-  background: url("../images/focus.jpg") no-repeat center center;
+  background: url("../images/focus.png") no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -104,20 +105,30 @@ body {
 /* ---------------------------------------------Eleventh Embodiment section------------------------------------*/
 
 .about-container {
-  margin-top: 50px;
+  background-color: #c4881be3;
   margin-bottom: 50px;
+  height: 300px;
+  
 }
 
 .about {
   height: auto;
   justify-content: center;
   align-items: center;
-  color: #c4881be3;
+  color: #fafafa;
   text-align: center;
-  padding-top: 10px;
+  padding-top: 20px;
 }
 
+.title-text-about {
+  text-align: center;
+  color: #fafafa;
+  padding-top: 35px;
+  text-transform: uppercase;
+  word-spacing: 5px;
+}
 /* ---------------------------------------------My story-----------------------------------------------------*/
+
 
 .title-text {
   text-align: center;
@@ -186,11 +197,13 @@ body {
   background-color: #c4881be3;
   width: 150px;
   border-radius: 5%;
-  margin-top: 70px;
+  margin-top: 40px;
 }
 
 .book-session-text {
     text-align: center;
+    text-transform: uppercase;
+    word-spacing: 4px;
 }
 
 /*--------------------------Home page See Events section-------------------------------------------------------------------*/
@@ -372,17 +385,23 @@ footer {
   font-size: xx-large;
 }
 
+.header-container {
+    margin-top: -8px;
+    
+
+}
 .methods-text {
   color: #c4881be3;
   text-align: center;
   font-size: x-large;
   margin-top: 100px;
+  margin-left: 60px;
   padding-right: 80px;
 }
 
 .btn-advice {
   margin-top: 60px;
-  margin-left: 250px;
+  margin-left: 280px;
   color: #fafafa;
   background-color: #c4881be3;
   width: 200px;
@@ -450,18 +469,30 @@ footer {
 }
 
 .kundalini-img {
-    display: flex;
-    justify-content: center;
-    margin-top: 80px;
-    margin-left: 50px;
+  margin: 0px auto;
+  margin-top: 80px;
+  
 }
 
 .yin-img {
-  margin-left: 150px;
+  max-width: 100%;
+  height:auto;
+  padding: 10px;
+  padding-left: 10px;
+  
 }
 
+.yin-second-img {
+  max-width: 100%;
+  height:auto;
+  padding: 10px;
+}
+
+
 .reiki-img {
- margin-top: 50px;
+ max-width: 100%;
+  height:auto;
+  margin-top: 90px;
 }
 
 .breathing-img {
@@ -469,20 +500,29 @@ footer {
 }
 
 .shaman-img {
-   margin-top: 10px;
+   max-width: 100%;
+  height:auto;
 }
 
-.shaman-second-img {
-    
-}
 
 .shaman-second-img {
-    margin-top: 10px;
+   max-width: 100%;
+  height:auto;
 }
 
    
 /*--------------------------Events Page -------------------------------------------------------------------*/
 
+.page-header {
+  background-color: #c4881be3;
+  color:#fafafa;
+  height: 100px;
+  text-align: center;
+  text-transform: uppercase;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+}
 .events-title {
   color: #c4881be3;
   text-align: center;
@@ -510,6 +550,11 @@ footer {
   justify-content:center;
   margin-bottom: 30px;
 }
+
+#price {
+    color: #c4881be3;
+    font-weight: 600;
+}
  
  /*----------------------------------------------Media Queries-----------------------------------*/
 
@@ -524,161 +569,7 @@ footer {
     margin-left: 60px;
   }
 }
-
+/*
 /* Media queries for What I Do page */
-
-@media screen and (max-width:768px) {
-    .yoga-heading {
-    color: #c4881be3;
-    text-align: center;
-    text-transform: uppercase;
-    font-size: x-large;
-  }
-
-  .methods-text {
-    color: #c4881be3;
-    text-align: center;
-    justify-items: center;
-    font-size: larger;
-    margin-top: 30px;
-    padding-right: 5px;
-  }
-
-  .btn-advice {
-    margin-top: 15px;
-    margin-left: 100px;
-    margin-bottom: 10px;
-    color: #fafafa;
-    background-color: #c4881be3;
-    width: 150px;
-  }
-
-  .description-text {
-    
-    text-align: justify;
-    font-size: large;
-    
-    margin: 0px auto;
-  }
-
-  .description-text h6 {
-      display: inline;
-      margin-left: 75px;
-      padding-bottom:50px;
-}
-
-  .quote-text {
-    margin-top: -50px;
-    padding-left: 30px;
-    padding-right: 20px;
-    text-align: center;
-    font-size: medium;
-    text-shadow: 5px 3px 10px rgba(0, 0, 0, 0.281);
-    color:#c4881be3;
-  }
-
-  .kundalini-img {
-    margin: 0px auto;
-   }
-
-  .yin-img {
-    margin:0px auto;
-  }
-
-  .yin-second-img {
-    margin-top: 10px;
-  }
-
-  .reiki-img {
-    margin-top: 10px;
-  }
-
-  .shaman-img {
-    margin:0px auto;
-  }
-
-.kundalini-container {
-   padding: 20px;
-}
-
-.btn-class-kundalini {
-  margin-left: 95px;
-  margin-top: 30px;
-  color: #fafafa;
-  background-color: #c4881be3;
-  width: 200px;
- 
-}
-.btn-class-yin {
-  margin-left:65px;
-  margin-bottom: 40px;
-  color: #fafafa;
-  background-color: #c4881be3;
-  width: 200px;
-}
-
-.btn-class-reiki {
-  margin-top: 30px;
-  margin-left:70px;
-  margin-bottom: 40px;
-  color: #fafafa;
-  background-color: #c4881be3;
-  width: 200px;
-}
-
-.btn-class-shaman {
-  margin-left: 75px;
-  margin-bottom: 40px;
-  color: #fafafa;
-  background-color: #c4881be3;
-  width: 200px;
-}
-}
-
-@media screen and (min-width: 992px) {
-
-.btn-class-kundalini {
-  margin-left: 420px;
-  margin-top: -40px;
-  color: #fafafa;
-  background-color: #c4881be3;
-  width: 200px;
- 
-}
-
-.yin-img {
-  margin-left: 150px;
-  }
-
-.yin-second-img {
-       margin-left: -200px;
-  }
-
-  .btn-class-yin {
-  margin-left: 750px;
-  margin-bottom: 40px;
-  color: #fafafa;
-  background-color: #c4881be3;
-  width: 200px;
-}
-
-.btn-class-shaman {
-  margin-left:830px;
-  margin-bottom: 40px;
-  color: #fafafa;
-  background-color: #c4881be3;
-  width: 200px;
-}
-
-.shaman-img {
-    margin-left:120px;
-  }
-
-.shaman-second-img {
-margin-left: 10px;
-
-}
-
-}
 
 
