--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -556,7 +556,7 @@ footer {
     font-weight: 600;
 }
  
- /*----------------------------------------------Media Queries-----------------------------------*/
+ /*----------------------------------------------------------Media Queries------------------------------------------------------------------*/
 
 /* Media query for the form on the contact page borrowed from the Love Running challenge*/
 
@@ -570,6 +570,189 @@ footer {
   }
 }
 /*
-/* Media queries for What I Do page */
 
 
+/* ---------------------------------------------------------------- (Small) Mobile---------------------------------------------------------- */
+
+
+/* ------------------------------------------------ Home Page -------------------------------*/
+
+@media screen and (min-width: 360px) {
+
+
+.hero-outer {
+  height: 560px;
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+
+}
+.about-container {
+  background-color: #c4881be3;
+  height: 260px;
+  
+}
+
+.title-text-about {
+  text-align: center;
+  color: #fafafa;
+  padding-top: 15px;
+  text-transform: uppercase;
+  word-spacing: 5px;
+  font-size: larger;
+  
+}
+
+.about {
+  justify-content: center;
+  align-items: center;
+  color: #fafafa;
+  text-align: center;
+  font-size: large;
+  padding:0px;
+  margin-top: -10px;
+}
+
+.owner-img {
+  max-width: 100%;
+  height: auto;
+  margin: 0px auto;
+}
+
+.owner-text {
+  display:flex;
+  justify-items: center;
+  text-align: justify;
+  padding: 15px;
+  color: hsla(38, 38%, 25%, 0.89);
+  font-size: xxx-small;
+}
+
+.teacher-training, .teaching {
+    font-size: small;
+    text-align:justify;
+}
+.title-text {
+  text-align: center;
+  color: #c4881be3;
+  padding-top: 25px;
+  text-transform: uppercase;
+  font-size: x-large;
+}
+
+.yoga-img {
+  display: none;
+}
+
+.yoga-text {
+    text-align:center;
+}
+}
+
+/* -------------------------------------------------------------------------------- (Medium) Tablet -------------------- */
+
+/* ------------------------------------------------ Home Page -------------------------------*/
+@media screen and (min-width: 768px) {
+
+
+.hero-outer {
+  height: 600px;
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+
+}
+.about-container {
+  background-color: #c4881be3;
+  height: 355px;
+  
+}
+
+.title-text-about {
+  text-align: center;
+  color: #fafafa;
+  padding-top: 15px;
+  text-transform: uppercase;
+  word-spacing: 5px;
+  font-size: xx-large;
+  
+}
+
+.about {
+  justify-content: center;
+  align-items: center;
+  color: #fafafa;
+  text-align: center;
+  font-size: x-large;
+  padding-top:20px;
+  margin-top: -10px;
+}
+
+.owner-img {
+  max-width: 100%;
+  height: auto;
+  margin-top: 8px;
+  margin-bottom: 30px;
+}
+}
+
+/* -------------------------------------------------------------------------------- Large (Desktop) -------------------- */
+
+@media screen and (min-width: 992px) {
+
+.about {
+  justify-content: center;
+  align-items: center;
+  color: #fafafa;
+  text-align: center;
+  font-size: larger;
+  padding-top:20px;
+  margin-top: -10px;
+  line-height: 
+}
+
+.owner-img {
+  max-width: 100%;
+  height: auto;
+  margin-top: 8px;
+  margin-bottom: 30px;
+}
+
+.owner-text {
+  text-align: justify;
+  padding-right: 50px;
+  color: hsla(38, 38%, 25%, 0.89);
+}
+}
+
+
+/* -------------------------------------------------------------------------------- Large (Desktop) -------------------- */
+
+@media screen and (min-width: 1200px) {
+
+.hero-outer {
+  height: 750px;
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+.about-container {
+  background-color: #c4881be3;
+  margin-bottom: 50px;
+  height: 250px;
+  
+}
+
+.yoga-text {
+  padding-top: 50px;
+  margin-top: 20px;
+  text-align:justify;
+  margin-left: 10px;
+}
+
+.yoga-img {
+  margin-left: 120px;
+  margin-top: 50px;
+}
+}
