--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -380,28 +380,33 @@ footer {
 
 .yoga-heading {
   color: #c4881be3;
-  text-align: justify;
+  text-align: center;
   text-transform: uppercase;
   font-size: xx-large;
+  margin-top:60px;
 }
 
 .header-container {
-    margin-top: -8px;
+   margin-top: 20px;
     
+.what-img {
+    margin-top:20px;
+}
 
 }
 .methods-text {
   color: #c4881be3;
   text-align: center;
   font-size: x-large;
-  margin-top: 100px;
+  margin-top: 50px;
   margin-left: 60px;
   padding-right: 80px;
 }
 
 .btn-advice {
   margin-top: 60px;
-  margin-left: 280px;
+  margin-left: 450px;
+  margin-bottom: 30px;
   color: #fafafa;
   background-color: #c4881be3;
   width: 200px;
@@ -413,6 +418,9 @@ footer {
   margin: 50px 0px 50px 150px;
 }
 
+#yogi {
+    text-align: center;
+}
 .kundalini-container {
     padding: 0px;
 }
@@ -421,9 +429,10 @@ footer {
   text-align: center;
   font-size: x-large;
   text-shadow: 5px 3px 10px rgba(0, 0, 0, 0.281);
-  padding-top: 50px;
+  padding-top: 10px;
   color:#c4881be3;
   margin-top: 50px;
+  margin-bottom:50px;
  
 }
 
@@ -436,32 +445,35 @@ footer {
 }
 
 .btn-class-kundalini {
-  margin-left: 355px;
-  margin-bottom: 20px;
+  margin-left: 455px;
+  margin-bottom: 50px;
+  margin-top: -40px;
   color: #fafafa;
   background-color: #c4881be3;
   width: 200px;
-  margin-top: -35px;
+  
 }
 
 .btn-class-yin {
-  margin-left:695px;
+  margin-left: 850px;
   margin-bottom: 40px;
   color: #fafafa;
   background-color: #c4881be3;
   width: 200px;
+  margin-top: 50px;
 }
 
 .btn-class-reiki {
-  margin-left:400px;
-  margin-bottom: 40px;
+  margin-left: 850px;
+  margin-top: 80px;
+  margin-bottom: 80px;
   color: #fafafa;
   background-color: #c4881be3;
   width: 200px;
 }
 
 .btn-class-shaman {
-  margin-left: 680px;
+  margin-left: 850px;
   margin-bottom: 40px;
   color: #fafafa;
   background-color: #c4881be3;
@@ -470,7 +482,7 @@ footer {
 
 .kundalini-img {
   margin: 0px auto;
-  margin-top: 80px;
+  margin-top: 60px;
   
 }
 
@@ -491,23 +503,28 @@ footer {
 
 .reiki-img {
  max-width: 100%;
-  height:auto;
-  margin-top: 90px;
+ height:auto;
+ margin-top: 30px;
 }
 
 .breathing-img {
-  margin-bottom: 50px;
+  margin-bottom: 70px;
+  margin-left: 400px;
+  margin-top: 30px;
+
 }
 
 .shaman-img {
    max-width: 100%;
   height:auto;
+  margin-bottom: 30px;
 }
 
 
 .shaman-second-img {
    max-width: 100%;
   height:auto;
+  margin-bottom: 30px;
 }
 
    
@@ -516,46 +533,105 @@ footer {
 .page-header {
   background-color: #c4881be3;
   color:#fafafa;
-  height: 100px;
+  height: 50px;
   text-align: center;
   text-transform: uppercase;
   display:flex;
   align-items: center;
   justify-content: center;
 }
+
 .events-title {
   color: #c4881be3;
   text-align: center;
   text-transform: uppercase;
-  font-size: xx-large;
+ 
   margin:0px auto;
   padding-top: 50px;
 
 }
-
-.retreat-title {
-  color:  hsla(38, 38%, 25%, 0.89);
-  text-align: center;
-  margin-top: 20px;
-}
-
 .retreat-text{
   color:  hsla(38, 38%, 25%, 0.89);
   text-align: justify;
   font-size: large;
+  padding-left: 20px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.retreat-facts h3 {
+  
+ color:  hsla(38, 38%, 25%, 0.89);
+ 
+  
+}
+
+.retreat-text h4 {
+    color: hsla(38, 38%, 25%, 0.89);
+    text-align: left;
+
+}
+
+.retreat-facts {
+    margin-top: 50px;
+    margin-bottom:50px;
+    text-align:justify;
+
 }
 
 .video-position {
   display:flex;
   justify-content:center;
+  margin-top: -10px;
   margin-bottom: 30px;
 }
+
+/*#video-text { 
+    display:flex;
+  justify-content:center;
+}*/
 
 #price {
     color: #c4881be3;
     font-weight: 600;
+    
+    font-size: xx-large;
+}
+
+.workshop {
+   margin-top: 140px;
+   
 }
  
+.workshop p {
+    text-align: justify;
+}
+
+.workshop-img {
+    margin-left: 50px;
+    margin-bottom: 60px;
+    margin-top: 150px;
+
+}
+
+.workshop h3 {
+    color: #c4881be3;
+      
+}
+
+.btn-workshop {
+  margin-top: -10px;
+  color: #fafafa;
+  background-color: #c4881be3;
+  width: 200px;
+    
+}
+
+.workshop ul {
+    list-style-type: none;
+   
+    padding 0px;
+}
  /*----------------------------------------------------------Media Queries------------------------------------------------------------------*/
 
 /* Media query for the form on the contact page borrowed from the Love Running challenge*/
@@ -589,7 +665,7 @@ footer {
 }
 .about-container {
   background-color: #c4881be3;
-  height: 260px;
+  height: 265px;
   
 }
 
@@ -607,7 +683,7 @@ footer {
   justify-content: center;
   align-items: center;
   color: #fafafa;
-  text-align: center;
+  text-align: justify;
   font-size: large;
   padding:0px;
   margin-top: -10px;
@@ -625,8 +701,7 @@ footer {
   text-align: justify;
   padding: 15px;
   color: hsla(38, 38%, 25%, 0.89);
-  font-size: xxx-small;
-}
+  
 
 .teacher-training, .teaching {
     font-size: small;
@@ -645,7 +720,8 @@ footer {
 }
 
 .yoga-text {
-    text-align:center;
+    text-align:justify;
+    padding: 30px;
 }
 }
 
